--- a/START_Exam_1.ipynb
+++ b/START_Exam_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "704a1e9b",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "bcdc9661",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,7 @@
        "6                1286  15.420940  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "5fc8c370",
    "metadata": {},
    "outputs": [
@@ -303,12 +303,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "6418c0eb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample Size: 3961\n",
+      "Mean Price: 2,028,387.53\n",
+      "95% Confidence Interval: (1,990,298.08, 2,066,476.99)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Generalize "
+    "# Generalize \n",
+    "\n",
+    "sample_prices = data_uae['price'] # Use the data_uae\n",
+    "\n",
+    "# Calculate sample stats\n",
+    "n = len(sample_prices)\n",
+    "mean_price = np.mean(sample_prices)\n",
+    "std_price = np.std(sample_prices, ddof=1)\n",
+    "\n",
+    "# 95% confidence interval using t-distribution\n",
+    "confidence = 0.95\n",
+    "t_critical = ss.t.ppf((1 + confidence) / 2, df=n - 1)\n",
+    "margin_of_error = t_critical * (std_price / np.sqrt(n))\n",
+    "ci_lower = mean_price - margin_of_error\n",
+    "ci_upper = mean_price + margin_of_error\n",
+    "\n",
+    "print(f\"Sample Size: {n}\")\n",
+    "print(f\"Mean Price: {mean_price:,.2f}\")\n",
+    "print(f\"95% Confidence Interval: ({ci_lower:,.2f}, {ci_upper:,.2f})\")\n"
    ]
   },
   {
@@ -325,11 +353,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "76b7440d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlation between bedrooms and bathrooms: 0.8872\n",
+      "Interpretation: There is a strong relationship between the number of bedrooms and bathrooms.\n",
+      "Usually, properties with more bedrooms tend to have more bathrooms, which makes sense for function and design.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# When I first tried this I was running into Type Errors, so here I'm checking the type and then converting it to numeric. \n",
+    "#print(\"Bedrooms data type:\", data_uae['bedrooms'].dtype)\n",
+    "#print(\"Bathrooms data type:\", data_uae['bathrooms'].dtype)\n",
+    "\n",
+    "# Convert to numeric, handling errors by coercing to NaN to clean it up and only look at the values we actually need. \n",
+    "data_uae['bedrooms_num'] = pd.to_numeric(data_uae['bedrooms'], errors='coerce')\n",
+    "data_uae['bathrooms_num'] = pd.to_numeric(data_uae['bathrooms'], errors='coerce')\n",
+    "\n",
+    "# Drop rows with missing values in either column for correlation calculation\n",
+    "correlation_data = data_uae[['bedrooms_num', 'bathrooms_num']].dropna()\n",
+    "\n",
+    "# Calculate correlation\n",
+    "bed_bath_corr = correlation_data['bedrooms_num'].corr(correlation_data['bathrooms_num'])\n",
+    "\n",
+    "print(f\"Correlation between bedrooms and bathrooms: {bed_bath_corr:.4f}\")\n",
+    "\n",
+    "# Interpretation if series \n",
+    "if abs(bed_bath_corr) < 0.1:\n",
+    "    interpretation = \"very weak relationship\"\n",
+    "elif abs(bed_bath_corr) < 0.3:\n",
+    "    interpretation = \"weak relationship\"\n",
+    "elif abs(bed_bath_corr) < 0.5:\n",
+    "    interpretation = \"moderate relationship\"\n",
+    "else:\n",
+    "    interpretation = \"strong relationship\"\n",
+    "\n",
+    "print(f\"Interpretation: There is a {interpretation} between the number of bedrooms and bathrooms.\")\n",
+    "print(\"Usually, properties with more bedrooms tend to have more bathrooms, which makes sense for function and design.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -343,12 +410,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "b2b82c7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Price per Square Foot by Furnishing Type:\n",
+      "               mean  count\n",
+      "furnishing                \n",
+      "NO          1557.76   2804\n",
+      "PARTLY      1430.41    351\n",
+      "YES         1922.97    804\n",
+      "\n",
+      "Difference between highest and lowest: 492.56\n",
+      "Conclusion: There appears to be meaningful differences in price per square foot between furnishing types.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Go"
+    "# Go\n",
+    "# Calculate price per square foot\n",
+    "data_uae['price_per_sqft'] = data_uae['price'] / data_uae['sq_ft']\n",
+    "\n",
+    "# Group by furnishing type\n",
+    "furnishing_stats = data_uae.groupby('furnishing')['price_per_sqft'].agg(['mean', 'count']).round(2)\n",
+    "\n",
+    "print(\"Average Price per Square Foot by Furnishing Type:\")\n",
+    "print(furnishing_stats)\n",
+    "\n",
+    "# Check if there are any meaningful differences\n",
+    "print(f\"\\nDifference between highest and lowest: {furnishing_stats['mean'].max() - furnishing_stats['mean'].min():.2f}\")\n",
+    "\n",
+    "# Conclusion\n",
+    "if furnishing_stats['mean'].max() - furnishing_stats['mean'].min() > 100:\n",
+    "    print(\"Conclusion: There appears to be meaningful differences in price per square foot between furnishing types.\")\n",
+    "else:\n",
+    "    print(\"Conclusion: The differences in price per square foot between furnishing types are relatively small.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5787e111",
+   "metadata": {},
+   "source": [
+    "Furnishing seems to affect the value quite a bit. In reality people may prefer to pay the extra money for the convenience of knowing the home is already furnished. "
    ]
   },
   {
@@ -378,10 +486,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "76c1a18b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total good days in the year: 351\n",
+      "Minimum good days needed for success: 329\n",
+      "Year successful: True\n",
+      "CONCLUSION: We can be comfortable stating this store is expected to be a success.\n"
+     ]
+    }
+   ],
    "source": [
     "customers_per_day = 200\n",
     "buy_rate = 0.22\n",
@@ -392,13 +511,51 @@
     "good_day_minimum_rate = .10\n",
     "good_day_minimum_count = 365 - (int(365 * good_day_minimum_rate))\n",
     "\n",
-    "# Get simulating!\n"
+    "# Get simulating!\n",
+    "\n",
+    "# Track how many good days we have in a year\n",
+    "total_good_days = 0\n",
+    "\n",
+    "# Simulate one full year\n",
+    "for day in range(365):\n",
+    "    \n",
+    "    # Finding out how many customers we get in a day\n",
+    "    daily_customers = np.random.poisson(customers_per_day)\n",
+    "    \n",
+    "    # Customers that buy something\n",
+    "    buyers_today = np.random.binomial(daily_customers, buy_rate)\n",
+    "    \n",
+    "    # Daily Revenue\n",
+    "    daily_revenue = 0\n",
+    "    if buyers_today > 0:\n",
+    "        for buyer in range(buyers_today):\n",
+    "            purchase_amount = np.random.normal(mean_purchase_per_buyer, stddev_purchase_per_buyer)\n",
+    "            # Make sure there are no negative purchases\n",
+    "            if purchase_amount > 0:\n",
+    "                daily_revenue += purchase_amount\n",
+    "    \n",
+    "    # Check to see if we had a good Day\n",
+    "    if daily_revenue >= minimum_daily_income:\n",
+    "        total_good_days += 1\n",
+    "\n",
+    "# Determinign if the Year was a success\n",
+    "is_successful = total_good_days >= good_day_minimum_count\n",
+    "\n",
+    "print(f\"Total good days in the year: {total_good_days}\")\n",
+    "print(f\"Minimum good days needed for success: {good_day_minimum_count}\")\n",
+    "print(f\"Year successful: {is_successful}\")\n",
+    "\n",
+    "# COnclusion\n",
+    "if is_successful:\n",
+    "    print(\"CONCLUSION: We can be comfortable stating this store is expected to be a success.\")\n",
+    "else:\n",
+    "    print(\"CONCLUSION: We should NOT state this store is expected to be a success.\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf_mar_2025",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -412,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
